...
              child: const Text('Batal', style: TextStyle(color: Colors.grey)),
            ),
            TextButton(
              // Tombol Konfirmasi Logout
              onPressed: () => Navigator.of(context).pop(true),
              child: const Text(
                'Ya, Logout',
                style: TextStyle(color: Colors.pink),
              ),
            ),
          ],
        );
      },
...
      }
    });
  }

  // --- FUNGSI PENGATUR ONTAP ---
  void _onItemTapped(int index) {
    // Cek jika item yang diklik adalah 'Logout' (Index 2)
    if (index == 2) {
      // Panggil dialog konfirmasi, bukan langsung logout
      _showLogoutConfirmationDialog(context);
    } else {
      // Jika Produk (0) atau Keranjang (1), ubah state
      setState(() {
...
