...
            },
          ),
        ),
        if (showText) ...[
          const SizedBox(height: 8),
          const Text(
            'SuperCashier',
            style: TextStyle(
              fontSize: 24,
              fontWeight: FontWeight.bold,
              fontFamily: 'Poppins',
            ),
          ),
...
