...
                        Text(
                          'Metode Pembayaran',
                          style: TextStyle(fontSize: isLandscape ? 12 : 16, fontWeight: FontWeight.bold),
                        ),
                        SizedBox(height: isLandscape ? 6 : 12),
                        _buildPaymentMethodOption(0, 'Kartu Debit', Icons.credit_card, isLandscape),
                        _buildPaymentMethodOption(1, 'Tunai', Icons.money, isLandscape),
                        _buildPaymentMethodOption(2, 'QRIS', Icons.qr_code, isLandscape),
                      ],
                    ),
                  ),
                ),

...
